Added image of suitcase

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 </head>
 <body>
+	<img src="suitcase.jpg" height=100 width=150 alt="">
 	<h1>Coming Soon...Airpack</h1>
 </body>
 </html>
